# auto-register-s

./: .env  .env.example  .pylintrc  main.py  pyproject.toml  run_auto_register.py  test.py  test_event_bus.py  test_workers.py
app/apis/: __init__.py  apis.py
app/apis/v1/: devices.py  healthy.py  users.py  workers.py
app/core/: containers.py  database.py  dependencies.py  event_bus.py  events.py  logging.py  settings.py
app/dtos/: devices_dto.py  users_dto.py
app/handlers/: __init__.py  device_event_handler.py  new_access_card_event_handler.py  update_last_rec_no_handler.py
app/models/: base.py  device.py  event.py  webhook.py
app/repos/: device_repo.py
app/services/: dahua_netsdk_service.py
app/types/: dahua_netsdk_types.py
app/utils/: dahua_converter.py  requests.py
app/workers/: auto_register_serve_worker.py  base_worker.py  device_event_polling_worker.py  event_polling_worker.py  worker_manager.py  worker_types.py
docs/: NetSDK_Python_Programming_Manual.md
